force-app/main/default/objects/Lead/fields/attended_sales__c.field-meta.xml
<CustomField>
    <fullName>attended_sales__c</fullName>
    <label>担当営業</label>
    <length>15</length>
    <type>Text</type>
</CustomField>