force-app/main/default/objects/Lead/fields/callcount__c.field-meta.xml
<CustomField>
    <fullName>callcount__c</fullName>
    <label>コール数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>