force-app/main/default/objects/Lead/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>競合</label>
    <length>100</length>
    <type>Text</type>
</CustomField>