force-app/main/default/objects/Lead/fields/DeviceName__c.field-meta.xml
<CustomField>
    <fullName>DeviceName__c</fullName>
    <label>利用端末</label>
    <length>128</length>
    <type>Text</type>
</CustomField>