force-app/main/default/objects/Lead/fields/DM_NG__c.field-meta.xml
<CustomField>
    <fullName>DM_NG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM禁止</label>
    <type>Checkbox</type>
</CustomField>