force-app/main/default/objects/Lead/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>応対者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>