force-app/main/default/objects/Lead/fields/employee_num__c.field-meta.xml
<CustomField>
    <fullName>employee_num__c</fullName>
    <description>社員数</description>
    <label>社員数</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1~10</fullName>
            </value>
            <value>
                <fullName>11~30</fullName>
            </value>
            <value>
                <fullName>31~50</fullName>
            </value>
            <value>
                <fullName>51~100</fullName>
            </value>
            <value>
                <fullName>101~300</fullName>
            </value>
            <value>
                <fullName>301~500</fullName>
            </value>
            <value>
                <fullName>501~1000</fullName>
            </value>
            <value>
                <fullName>1000~</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>