force-app/main/default/objects/Lead/fields/Employee_size__c.field-meta.xml
<CustomField>
    <fullName>Employee_size__c</fullName>
    <label>従業員規模</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1～10</fullName>
            </value>
            <value>
                <fullName>11～49</fullName>
            </value>
            <value>
                <fullName>50～99</fullName>
            </value>
            <value>
                <fullName>100～299</fullName>
            </value>
            <value>
                <fullName>300～499</fullName>
            </value>
            <value>
                <fullName>500～999</fullName>
            </value>
            <value>
                <fullName>1000～4999</fullName>
            </value>
            <value>
                <fullName>5000～</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>