force-app/main/default/objects/Lead/fields/Field10__c.field-meta.xml
<CustomField>
    <fullName>Field10__c</fullName>
    <label>最新のキャンペーンレスポンス日</label>
    <type>Date</type>
</CustomField>