force-app/main/default/objects/Lead/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>テレアポ</label>
    <length>200</length>
    <type>Text</type>
</CustomField>