force-app/main/default/objects/Lead/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>紹介</label>
    <length>200</length>
    <type>Text</type>
</CustomField>