force-app/main/default/objects/Lead/fields/first_touchpoint__c.field-meta.xml
<CustomField>
    <fullName>first_touchpoint__c</fullName>
    <label>初回流入経路</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>問い合わせ</fullName>
            </value>
            <value>
                <fullName>問い合わせ（自然検索）</fullName>
            </value>
            <value>
                <fullName>問い合わせ（meta）</fullName>
            </value>
            <value>
                <fullName>問い合わせ（Google広告）</fullName>
            </value>
            <value>
                <fullName>資料請求（自然検索）</fullName>
            </value>
            <value>
                <fullName>資料請求（meta）</fullName>
            </value>
            <value>
                <fullName>資料請求（Google広告）</fullName>
            </value>
            <value>
                <fullName>リスティング</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>アウトバウンドコール</fullName>
            </value>
            <value>
                <fullName>ITトレンド</fullName>
            </value>
            <value>
                <fullName>アスピック</fullName>
            </value>
            <value>
                <fullName>BOXIL</fullName>
            </value>
            <value>
                <fullName>kyozon</fullName>
            </value>
            <value>
                <fullName>アイミツSaaS</fullName>
            </value>
            <value>
                <fullName>STRATE</fullName>
            </value>
            <value>
                <fullName>ITmedia</fullName>
            </value>
            <value>
                <fullName>起業LOG</fullName>
            </value>
            <value>
                <fullName>ミツモア</fullName>
            </value>
            <value>
                <fullName>ONLY STORY</fullName>
            </value>
            <value>
                <fullName>展示会</fullName>
            </value>
            <value>
                <fullName>代理店</fullName>
            </value>
            <value>
                <fullName>顧客紹介</fullName>
            </value>
            <value>
                <fullName>知人紹介</fullName>
            </value>
            <value>
                <fullName>交流会</fullName>
            </value>
            <value>
                <fullName>逆営業と無効</fullName>
                <default>true</default>
                <label>問合せ（逆営業と無効）</label>
            </value>
            <value>
                <fullName>ITトレンド（逆営業と無効）</fullName>
            </value>
            <value>
                <fullName>アスピック（逆営業と無効）</fullName>
            </value>
            <value>
                <fullName>アイミツSaaS（逆営業と無効）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>