force-app/main/default/objects/Lead/fields/IMDT__c.field-meta.xml
<CustomField>
    <fullName>IMDT__c</fullName>
    <description>Initial Meeting Date &amp; Time</description>
    <label>初回打合せ日時</label>
    <type>DateTime</type>
</CustomField>