force-app/main/default/objects/Lead/fields/Inflow_source__c.field-meta.xml
<CustomField>
    <fullName>Inflow_source__c</fullName>
    <label>流入経路</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>web問い合わせ</fullName>
            </value>
            <value>
                <fullName>広告</fullName>
            </value>
            <value>
                <fullName>比較メディア-BOXIL</fullName>
            </value>
            <value>
                <fullName>比較メディア-ASPIC</fullName>
            </value>
            <value>
                <fullName>比較メディア-ITトレンド</fullName>
            </value>
            <value>
                <fullName>比較メディア-アイミツSaas</fullName>
            </value>
            <value>
                <fullName>比較メディア-kyozonメディア</fullName>
            </value>
            <value>
                <fullName>展示会</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>パートナー</fullName>
            </value>
            <value>
                <fullName>アウトバウンド</fullName>
            </value>
            <value>
                <fullName>Leadトスアップ</fullName>
            </value>
            <value>
                <fullName>顧客紹介</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>