force-app/main/default/objects/Lead/fields/InstallationTime__c.field-meta.xml
<CustomField>
    <fullName>InstallationTime__c</fullName>
    <label>導入時期</label>
    <length>128</length>
    <type>Text</type>
</CustomField>