force-app/main/default/objects/Lead/fields/integration_ID__c.field-meta.xml
<CustomField>
    <fullName>integration_ID__c</fullName>
    <externalId>true</externalId>
    <label>インテグレーションID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>