force-app/main/default/objects/Lead/fields/InUse_CTI__c.field-meta.xml
<CustomField>
    <fullName>InUse_CTI__c</fullName>
    <label>利用中CTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>