force-app/main/default/objects/Lead/fields/last__c.field-meta.xml
<CustomField>
    <fullName>last__c</fullName>
    <label>最終対応日</label>
    <type>DateTime</type>
</CustomField>