force-app/main/default/objects/Lead/fields/Lead_potential_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_potential_ID__c</fullName>
    <label>Lead ポテンシャル ID数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>