force-app/main/default/objects/Lead/fields/LeadSourceDate__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDate__c</fullName>
    <label>初回流入日</label>
    <type>Date</type>
</CustomField>