force-app/main/default/objects/Lead/fields/LeadSourceTime__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceTime__c</fullName>
    <label>初回流入日時</label>
    <type>DateTime</type>
</CustomField>