force-app/main/default/objects/Lead/fields/LineName__c.field-meta.xml
<CustomField>
    <fullName>LineName__c</fullName>
    <label>利用回線</label>
    <length>128</length>
    <type>Text</type>
</CustomField>