force-app/main/default/objects/Lead/fields/MainIndustry__c.field-meta.xml
<CustomField>
    <fullName>MainIndustry__c</fullName>
    <label>主業種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>industry</valueSetName>
    </valueSet>
</CustomField>