force-app/main/default/objects/Lead/fields/NextActionDate__c.field-meta.xml
<CustomField>
    <fullName>NextActionDate__c</fullName>
    <label>次回アクション日</label>
    <type>Date</type>
</CustomField>