force-app/main/default/objects/Lead/fields/Phone_test__c.field-meta.xml
<CustomField>
    <fullName>Phone_test__c</fullName>
    <formula>HYPERLINK(&quot;comdeskto://comdesk.com/call?number=&quot;&amp;Phone&amp;&quot;&amp;name=池田:&quot;,Phone,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone_test</label>
    <type>Text</type>
</CustomField>