force-app/main/default/objects/Lead/fields/pi__conversion_object_type__c.field-meta.xml
<CustomField>
    <fullName>pi__conversion_object_type__c</fullName>
    <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
    <label>Conversion Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>