force-app/main/default/objects/Lead/fields/pi__created_date__c.field-meta.xml
<CustomField>
    <fullName>pi__created_date__c</fullName>
    <description>The Account Engagement created date represents the date and time at which the Prospect record was created in Account Engagement. This will often differ from your Salesforce.com created date.</description>
    <label>Account Engagement Created Date</label>
    <type>DateTime</type>
</CustomField>