force-app/main/default/objects/Lead/fields/plan__c.field-meta.xml
<CustomField>
    <fullName>plan__c</fullName>
    <label>プラン</label>
    <length>200</length>
    <type>Text</type>
</CustomField>