force-app/main/default/objects/Lead/fields/Possibility__c.field-meta.xml
<CustomField>
    <fullName>Possibility__c</fullName>
    <label>見込み</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>