force-app/main/default/objects/Lead/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>商材</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comdesk Lead</fullName>
            </value>
            <value>
                <fullName>CRM連繫</fullName>
            </value>
            <value>
                <fullName>Salesforce連繫</fullName>
            </value>
            <value>
                <fullName>社用携帯CRM連繫</fullName>
            </value>
            <value>
                <fullName>Comdesk Flat</fullName>
                <isActive>false</isActive>
                <label>Comdesk Flat</label>
            </value>
            <value>
                <fullName>SES</fullName>
                <isActive>false</isActive>
                <label>SES</label>
            </value>
            <value>
                <fullName>受託</fullName>
                <isActive>false</isActive>
                <label>受託</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>