force-app/main/default/objects/Lead/fields/Re_inflow_date__c.field-meta.xml
<CustomField>
    <fullName>Re_inflow_date__c</fullName>
    <label>再流入日</label>
    <type>Date</type>
</CustomField>