force-app/main/default/objects/Lead/fields/RolloverDate__c.field-meta.xml
<CustomField>
    <fullName>RolloverDate__c</fullName>
    <label>次回契約更新日</label>
    <type>Date</type>
</CustomField>