force-app/main/default/objects/Lead/fields/sfLma__Subscriber_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Subscriber_Org_Type__c</fullName>
    <description>The Edition of this org. UE, EE, PE, TE, Free</description>
    <label>Subscriber Org Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>