force-app/main/default/objects/Lead/fields/SSI__c.field-meta.xml
<CustomField>
    <fullName>SSI__c</fullName>
    <label>SSI流入経路</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Widsleyから問い合わせ</fullName>
            </value>
            <value>
                <fullName>顧客側から問い合わせ</fullName>
            </value>
            <value>
                <fullName>顧客紹介</fullName>
            </value>
            <value>
                <fullName>交流会</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>