force-app/main/default/objects/Lead/fields/SSIindustry__c.field-meta.xml
<CustomField>
    <fullName>SSIindustry__c</fullName>
    <label>主業種(SSI用)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>industry</valueSetName>
    </valueSet>
</CustomField>