force-app/main/default/objects/Lead/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>ステータス</label>
    <length>20</length>
    <type>Text</type>
</CustomField>