force-app/main/default/objects/Lead/fields/SystemName__c.field-meta.xml
<CustomField>
    <fullName>SystemName__c</fullName>
    <label>システム名</label>
    <length>128</length>
    <type>Text</type>
</CustomField>