force-app/main/default/objects/Lead/fields/TEL2__c.field-meta.xml
<CustomField>
    <fullName>TEL2__c</fullName>
    <label>TEL2</label>
    <type>Phone</type>
</CustomField>