force-app/main/default/objects/Lead/fields/TEL3__c.field-meta.xml
<CustomField>
    <fullName>TEL3__c</fullName>
    <label>TEL3</label>
    <type>Phone</type>
</CustomField>