force-app/main/default/objects/Lead/fields/TEL4__c.field-meta.xml
<CustomField>
    <fullName>TEL4__c</fullName>
    <label>TEL4</label>
    <type>Phone</type>
</CustomField>