force-app/main/default/objects/Lead/fields/telesales_check__c.field-meta.xml
<CustomField>
    <fullName>telesales_check__c</fullName>
    <label>電話営業業務を行なっているか？</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
            <value>
                <fullName>現在検討中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>