force-app/main/default/objects/Lead/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>役職</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>代表</fullName>
            </value>
            <value>
                <fullName>役員クラス</fullName>
            </value>
            <value>
                <fullName>部長クラス</fullName>
            </value>
            <value>
                <fullName>課長クラス</fullName>
            </value>
            <value>
                <fullName>一般社員</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>