force-app/main/default/objects/Lead/fields/TM_LeadCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>TM_LeadCreatedDate__c</fullName>
    <description>Salesforce The Model ダッシュボード項目</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>リード作成日</label>
    <type>Date</type>
</CustomField>