force-app/main/default/objects/Lead/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>利用用途</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ビジネスフォン</fullName>
            </value>
            <value>
                <fullName>コールセンター</fullName>
            </value>
            <value>
                <fullName>BYOD</fullName>
            </value>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>社内コンタクトセンター</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>