force-app/main/default/objects/Lead/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>セールス担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>user</relationshipName>
    <type>Lookup</type>
</CustomField>