force-app/main/default/objects/Lead/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm_campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>