force-app/main/default/objects/Lead/fields/web__c.field-meta.xml
<CustomField>
    <fullName>web__c</fullName>
    <label>web問い合わせ内容</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>