force-app/main/default/objects/Lead/fields/Zendesk__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>