force-app/main/default/objects/Lead/fields/Zendesk__organization__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>