force-app/main/default/objects/Lead/fields/Zendesk__Result__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Result__c</fullName>
    <label>Zendesk Support Result</label>
    <type>TextArea</type>
</CustomField>