force-app/main/default/objects/Lead/fields/Zendesk__Tags__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Tags__c</fullName>
    <label>Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>