force-app/main/default/objects/Lead/fields/Zendesk__Zendesk_id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_id__c</fullName>
    <label>Zendesk Support User Id</label>
    <length>70</length>
    <type>Text</type>
</CustomField>