force-app/main/default/objects/Lead/fields/Zendesk__Zendesk_oldTags__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_oldTags__c</fullName>
    <label>Zendesk Support Old Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>