force-app/main/default/objects/Lead/fields/Zendesk__Zendesk_OutofSync__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zendesk Support Out of Sync</label>
    <type>Checkbox</type>
</CustomField>