force-app/main/default/objects/Lead/recordTypes/CDL.recordType-meta.xml
<RecordType>
    <fullName>CDL</fullName>
    <active>true</active>
    <businessProcess>CDL</businessProcess>
    <label>CDL</label>
</RecordType>