force-app/main/default/objects/Lead/recordTypes/SES.recordType-meta.xml
<RecordType>
    <fullName>SES</fullName>
    <active>true</active>
    <businessProcess>SSI</businessProcess>
    <label>SES案件</label>
</RecordType>