force-app/main/default/objects/Lead/validationRules/essential_items_for_starting_a_transacti.validationRule-meta.xml
<ValidationRule>
    <fullName>essential_items_for_starting_a_transacti</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( User__c ) &amp;&amp; ISCHANGED(IsConverted)</errorConditionFormula>
    <errorMessage>取引開始するには”セールス担当”を設定してください。</errorMessage>
</ValidationRule>