force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LeadSourceDate__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>first_touchpoint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LeadSourceDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2026</value>
    </filters>
    <filters>
        <field>first_touchpoint__c</field>
        <operation>equals</operation>
        <value>アスピック</value>
    </filters>
    <label>すべての進行中リード</label>
</ListView>